--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,15 @@
 	<groupId>org.insane</groupId>
 	<artifactId>sql4log4j</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
