--- a/pom.xml
+++ b/pom.xml
@@ -52,4 +52,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>4.2.2</version>
+		</dependency>
+	</dependencies>
 </project>
