--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<listener>true</listener>
+					<visitor>true</visitor>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
